--- a/style.css
+++ b/style.css
@@ -17,3 +17,10 @@
 .contact{
     background-color: 5AB2FF;
 }
+.source-code-pro {
+    font-family: "Source Code Pro", monospace;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+  }
+  
