--- a/style.css
+++ b/style.css
@@ -23,4 +23,7 @@
     font-weight: 400;
     font-style: normal;
   }
-  
+.project-img{
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%;
+}
