--- a/style.css
+++ b/style.css
@@ -24,6 +24,6 @@
     font-style: normal;
   }
 .project-img{
-    border-top-left-radius: 3%;
-    border-top-right-radius: 3%;
+    border-top-left-radius: 0.375rem;;
+    border-top-right-radius: 0.375rem;;
 }
